crates/otio-capi/include/otio.h

/* ===================================================================== *
 * Status
 * ===================================================================== */

/** What a call did, or why it could not. */
typedef enum OtioStatus {
    /** The call succeeded. */
    OTIO_STATUS_OK = 0,
    /** A pointer argument that may not be null was null. */
    OTIO_STATUS_NULL_POINTER = 1,
    /** A string argument was not valid UTF-8. */
    OTIO_STATUS_INVALID_UTF8 = 2,
    /** The call succeeded, and the answer is that there is no value. */
    OTIO_STATUS_NO_VALUE = 3,
    /** A node handle named an object that no longer exists. */
    OTIO_STATUS_STALE_HANDLE = 4,
    /** An argument was outside the range the call accepts. */
    OTIO_STATUS_INVALID_ARGUMENT = 5,
    /** The document could not answer the question asked of it. */
    OTIO_STATUS_CORE_ERROR = 6,
    /** A timecode or time string could not be read or written. */
    OTIO_STATUS_TIME_ERROR = 7,
    /** A file was not valid for the format it was read as. */
    OTIO_STATUS_PARSE_ERROR = 8,
    /** The document holds something the target format cannot express. */
    OTIO_STATUS_UNSUPPORTED = 9,
    /** A file could not be read from or written to disk. */
    OTIO_STATUS_IO_ERROR = 10,
    /** A panic in the Rust core was caught at the boundary. */
    OTIO_STATUS_PANIC = 11
} OtioStatus;
/* ===================================================================== *
 * Values
 * ===================================================================== */

/**
 * A block of bytes owned by the library.
 *
 * `data` is always NUL-terminated, so a buffer holding text can be used as a
 * C string directly; `len` counts the bytes before the terminator, which is
 * what a caller holding binary data needs.
 */
typedef struct OtioBuffer {
    char *data;
    size_t len;
} OtioBuffer;
/** A measure of time, as a `value` in units of `1 / rate` seconds. */
typedef struct OtioRationalTime {
    double value;
    double rate;
} OtioRationalTime;
/** A span of time: where it starts and how long it lasts. */
typedef struct OtioTimeRange {
    OtioRationalTime start_time;
    OtioRationalTime duration;
} OtioTimeRange;
/** An offset, a speed change and a rate change, applied together. */
typedef struct OtioTimeTransform {
    OtioRationalTime offset;
    double scale;
    double rate;
} OtioTimeTransform;
/**
 * A colour, as four components from 0 to 1.
 *
 * OTIO's colours also carry a name, which the calls that read and write one
 * take separately: a name is variable-length and a colour is not.
 */
typedef struct OtioColor {
    double r;
    double g;
    double b;
    double a;
} OtioColor;
/** A point, or a size, in two dimensions. */
typedef struct OtioV2d {
    double x;
    double y;
} OtioV2d;
/** An axis-aligned rectangle. */
typedef struct OtioBox2d {
    OtioV2d min;
    OtioV2d max;
} OtioBox2d;
/* ===================================================================== *
 * Documents and handles
 * ===================================================================== */

/**
 * An OTIO document: the arena that owns every object in a timeline.
 *
 * Releasing it releases every object in it, so handles into it go stale
 * rather than dangling.
 */
typedef struct OtioDocument OtioDocument;
/**
 * A handle to an object in a document.
 *
 * An index into the document's arena and the generation of the slot it was
 * issued for. If the object is removed and the slot reused, the generation no
 * longer matches, so a stale handle fails a lookup instead of reaching the
 * new occupant.
 */
typedef struct OtioNode {
    uint32_t index;
    uint32_t generation;
} OtioNode;
/** What to show for a frame an image sequence is missing. */
typedef enum OtioMissingFramePolicy {
    OTIO_MISSING_FRAME_ERROR = 0,
    OTIO_MISSING_FRAME_BLACK = 1,
    OTIO_MISSING_FRAME_HOLD = 2
} OtioMissingFramePolicy;
/**
 * The numbers that say how an image sequence is laid out on disk.
 *
 * The three parts of a frame's filename are strings, so they are read and
 * written by their own calls rather than sitting in here.
 */
typedef struct OtioImageSequence {
    int64_t start_frame;
    int64_t frame_step;
    double rate;
    int64_t frame_zero_padding;
    OtioMissingFramePolicy missing_frame_policy;
} OtioImageSequence;
/** How far a transition reaches on each side, where it reaches at all. */
typedef struct OtioHandles {
    bool has_before;
    OtioRationalTime before;
    bool has_after;
    OtioRationalTime after;
} OtioHandles;
/* ===================================================================== *
 * Formats
 * ===================================================================== */

/**
 * A file format this library reads and writes.
 *
 * AAF is not here yet: reading one is implemented in the `otio-aaf` crate,
 * which is still being built out.
 */
typedef enum OtioFormat {
    /** OpenTimelineIO's own JSON, the `.otio` file. */
    OTIO_FORMAT_OTIO_JSON = 0,
    /** Avid Log Exchange, the `.ale` file. */
    OTIO_FORMAT_ALE = 1,
    /** CMX 3600 EDL, the `.edl` file. */
    OTIO_FORMAT_CMX_3600 = 2,
    /** Final Cut Pro 7 XML, the `.xml` file. */
    OTIO_FORMAT_FCP7_XML = 3,
    /** Final Cut Pro X XML, the `.fcpxml` file. */
    OTIO_FORMAT_FCPX_XML = 4
} OtioFormat;
/** Which system's conventions an EDL is written for. */
typedef enum OtioEdlStyle {
    /** Avid Media Composer. */
    OTIO_EDL_STYLE_AVID = 0,
    /** Nucoda. */
    OTIO_EDL_STYLE_NUCODA = 1,
    /** Adobe Premiere Pro. */
    OTIO_EDL_STYLE_PREMIERE = 2
} OtioEdlStyle;
/**
 * What to do while reading a file.
 *
 * A field a format does not use is ignored, so one of these can be filled in
 * once and used for several. Pass a null pointer for the usual behaviour, or
 * start from `otio_read_options_default()`.
 *
 * This struct may gain fields before the ABI is declared stable.
 */
typedef struct OtioReadOptions {
    /** The rate timecode is read at. Zero means the format's own default. */
    double rate;
    /** ALE: the column a clip takes its name from. Null means "Name". */
    const char *name_column;
    /** EDL: accept a file whose record timecode does not add up. */
    bool ignore_timecode_mismatch;
} OtioReadOptions;
/** What to do while writing a file. As `OtioReadOptions`. */
typedef struct OtioWriteOptions {
    /** The rate timecode is written at. Zero takes it from the document. */
    double rate;
    /** EDL: which system's conventions to write for. */
    OtioEdlStyle edl_style;
    /** EDL: how many characters to pad or truncate a reel name to. */
    size_t reelname_len;
    /** ALE: the VIDEO_FORMAT to state in the heading. */
    const char *video_format;
} OtioWriteOptions;
/* ===================================================================== *
 * Status and version
 * ===================================================================== */
/**
 * Returns the message describing the last failing call on this thread.
 *
 * The string is owned by the library and stays valid until the next `otio_*`
 * call on this thread. After a call that succeeded it is empty. It is never
 * null.
 */
const char *otio_error_message(void);
/* ===================================================================== *
 * Buffers
 * ===================================================================== */
/**
 * Releases a buffer the library handed out.
 *
 * Passing a buffer whose `data` is null does nothing. Passing the same
 * buffer twice, or one this library did not produce, is undefined.
 */
void otio_buffer_free(OtioBuffer buffer);
/* ===================================================================== *
 * Algorithms
 * ===================================================================== */
/**
 * Returns a copy of a track holding only what falls inside a span.
 *
 * The copy is added to the same document and has no parent.
 */
OtioStatus otio_algorithm_track_trimmed_to_range(
    OtioDocument *target,
    OtioNode track,
    OtioTimeRange trim_range,
    OtioNode *out_track);
/**
 * Collapses a stack's tracks into one, top layer winning where it is visible.
 */
OtioStatus otio_algorithm_flatten_stack(
    OtioDocument *target,
    OtioNode stack,
    OtioNode *out_track);
/**
 * Collapses a list of tracks into one, lowest first.
 */
OtioStatus otio_algorithm_flatten_tracks(
    OtioDocument *target,
    const OtioNode *tracks,
    size_t count,
    OtioNode *out_track);
/* ===================================================================== *
 * Reading and writing the interchange formats
 * ===================================================================== */
/**
 * Returns the defaults, for a caller that wants to change one field.
 */
OtioReadOptions otio_read_options_default(void);
/**
 * Returns the defaults, for a caller that wants to change one field.
 */
OtioWriteOptions otio_write_options_default(void);
/**
 * Reads a document from the bytes of a file in some format.
 *
 * `options` may be null for the format's usual behaviour.
 */
OtioStatus otio_read_from_bytes(
    OtioFormat format,
    const uint8_t *data,
    size_t len,
    const OtioReadOptions *options,
    OtioDocument **out_document);
/**
 * Reads a document from a file on disk in some format.
 */
OtioStatus otio_read_from_file(
    OtioFormat format,
    const char *path,
    const OtioReadOptions *options,
    OtioDocument **out_document);
/**
 * Writes a document as the bytes of a file in some format.
 *
 * The buffer is NUL-terminated, so a text format's output can be used as a C
 * string; `len` is what matters for a binary one.
 */
OtioStatus otio_write_to_bytes(
    OtioFormat format,
    const OtioDocument *source,
    const OtioWriteOptions *options,
    OtioBuffer *out_bytes);
/**
 * Writes a document to a file on disk in some format.
 */
OtioStatus otio_write_to_file(
    OtioFormat format,
    const OtioDocument *source,
    const char *path,
    const OtioWriteOptions *options);