sdk/csharp/OpenTimelineIO/Interop.cs

// Code generated by otio-sdk-gen from crates/otio-capi. DO NOT EDIT.

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;

namespace OpenTimelineIO;

/// <summary>
/// The plumbing between this SDK and the C interface.
/// </summary>
/// <remarks>
/// <para>
/// Nothing here is part of the SDK's surface. It is the one place that knows
/// how a string, a buffer or a handle crosses the boundary, so that the
/// generated calls do not each have to.
/// </para>
/// </remarks>
internal static class Interop
{
    /// <summary>
    /// Unmanaged memory lent to one call and freed as it unwinds.
    /// </summary>
    /// <remarks>
    /// <para>
    /// The C interface borrows every string and every optional struct for the
    /// length of the call and keeps none of them, so what a call needs can be
    /// copied out, handed over and released again without the caller ever
    /// seeing it.
    /// </para>
    /// </remarks>
    internal sealed class Scratch : IDisposable
    {
        private readonly List<IntPtr> blocks = new();

        /// <summary>Copies a string out as null-terminated UTF-8.</summary>
        /// <remarks>
        /// <para>
        /// A null string is no string at all, which is how the C interface
        /// spells an argument that may be left out.
        /// </para>
        /// </remarks>
        internal IntPtr Utf8(string? text)
        {
            if (text is null)
            {
                return IntPtr.Zero;
            }
            var block = Marshal.StringToCoTaskMemUTF8(text);
            this.blocks.Add(block);
            return block;
        }

        /// <summary>Lends a struct to a call that wants a pointer to one.</summary>
        internal IntPtr Struct<T>(T value) where T : struct
        {
            var block = Marshal.AllocCoTaskMem(Marshal.SizeOf<T>());
            this.blocks.Add(block);
            Marshal.StructureToPtr(value, block, false);
            return block;
        }

        /// <summary>Releases everything lent to the call.</summary>
        public void Dispose()
        {
            foreach (var block in this.blocks)
            {
                Marshal.FreeCoTaskMem(block);
            }
            this.blocks.Clear();
        }
    }

    /// <summary>Throws what the library said, if it said anything went wrong.</summary>
    internal static void Check(Status status)
    {
        if (status != Status.Ok)
        {
            throw new OtioException(status, StaticText(Native.otio_error_message()));
        }
    }

    /// <summary>Copies a string the library owns forever and nobody frees.</summary>
    internal static string StaticText(IntPtr pointer) =>
        pointer == IntPtr.Zero ? string.Empty : Marshal.PtrToStringUTF8(pointer) ?? string.Empty;

    /// <summary>Copies a buffer of text out of the library, and frees it.</summary>
    internal static string Text(Native.OtioBuffer buffer)
    {
        if (buffer.data == IntPtr.Zero)
        {
            return string.Empty;
        }
        var text = Marshal.PtrToStringUTF8(buffer.data, (int)buffer.len);
        Native.otio_buffer_free(buffer);
        return text;
    }

    /// <summary>Copies a buffer of bytes out of the library, and frees it.</summary>
    internal static byte[] Bytes(Native.OtioBuffer buffer)
    {
        if (buffer.data == IntPtr.Zero)
        {
            return Array.Empty<byte>();
        }
        var bytes = new byte[(int)buffer.len];
        Marshal.Copy(buffer.data, bytes, 0, bytes.Length);
        Native.otio_buffer_free(buffer);
        return bytes;
    }

    /// <summary>Builds the class an object's schema names.</summary>
    /// <remarks>
    /// <para>
    /// Every handle that comes back from the library goes through this, so a
    /// cast tells the truth: <c>node as Clip</c> succeeds exactly when the
    /// object really is a clip. An object whose kind cannot be read comes back
    /// as a plain SerializableObject rather than as a guess.
    /// </para>
    /// </remarks>
    internal static SerializableObject MakeObject(Document? document, Native.OtioNode handle) =>
        Schemas.Make(document, handle);

    /// <summary>Whether every object named belongs to a document.</summary>
    /// <remarks>
    /// <para>
    /// A handle is an index into one document's arena, and two documents issue
    /// the same indices, so an object from one would resolve to an unrelated
    /// object in another rather than failing. Nothing in the handle says where
    /// it came from: the C# object carries that, and this is where it is used.
    /// An object that is none belongs to no document and means "no object", so
    /// it is allowed everywhere.
    /// </para>
    /// </remarks>
    internal static bool SameDocument(Document? owner, SerializableObject? node) =>
        node is null || ReferenceEquals(node.Document, owner) || node.IsNone();

    /// <summary>SameDocument, as something to throw rather than something to ask.</summary>
    internal static void RequireSameDocument(Document? owner, SerializableObject? node)
    {
        if (!SameDocument(owner, node))
        {
            throw new OtioException(
                Status.InvalidArgument, "otio: the object belongs to another document");
        }
    }

    /// <summary>SameDocument, for a whole list of objects.</summary>
    internal static bool SameDocumentAll(Document? owner, SerializableObject[] nodes)
    {
        foreach (var node in nodes)
        {
            if (!SameDocument(owner, node))
            {
                return false;
            }
        }
        return true;
    }

    /// <summary>RequireSameDocument, for a whole list of objects.</summary>
    internal static void RequireSameDocumentAll(Document? owner, SerializableObject[] nodes)
    {
        foreach (var node in nodes)
        {
            RequireSameDocument(owner, node);
        }
    }

    /// <summary>The part of a path after its last dot, which names a format.</summary>
    internal static string Suffix(string path)
    {
        var name = path.Replace('\\', '/');
        var slash = name.LastIndexOf('/');
        if (slash >= 0)
        {
            name = name.Substring(slash + 1);
        }
        var dot = name.LastIndexOf('.');
        return dot <= 0 ? string.Empty : name.Substring(dot + 1);
    }

    /// <summary>The format a path's suffix names, or a failure saying none does.</summary>
    internal static Format FormatOf(string path)
    {
        var suffix = Suffix(path);
        var format = Otio.FormatFromSuffix(suffix);
        if (format is null)
        {
            throw new OtioException(
                Status.NoValue, $"otio: no format is written with the suffix .{suffix}");
        }
        return format.Value;
    }
}

internal static partial class Native
{
    /// <summary>The library every call goes to.</summary>
    internal const string Library = "otio";

    /// <summary>The C interface's own <c>OtioBox2d</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioBox2d
    {
        internal Native.OtioV2d min;
        internal Native.OtioV2d max;
    }

    /// <summary>The C interface's own <c>OtioBuffer</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioBuffer
    {
        internal IntPtr data;
        internal nuint len;
    }

    /// <summary>The C interface's own <c>OtioColor</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioColor
    {
        internal double r;
        internal double g;
        internal double b;
        internal double a;
    }

    /// <summary>The C interface's own <c>OtioHandles</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioHandles
    {
        internal byte has_before;
        internal Native.OtioRationalTime before;
        internal byte has_after;
        internal Native.OtioRationalTime after;
    }

    /// <summary>The C interface's own <c>OtioImageSequence</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioImageSequence
    {
        internal long start_frame;
        internal long frame_step;
        internal double rate;
        internal long frame_zero_padding;
        internal MissingFramePolicy missing_frame_policy;
    }

    /// <summary>The C interface's own <c>OtioNode</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioNode
    {
        internal uint index;
        internal uint generation;
    }

    /// <summary>The C interface's own <c>OtioRationalTime</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioRationalTime
    {
        internal double value;
        internal double rate;
    }

    /// <summary>The C interface's own <c>OtioReadOptions</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioReadOptions
    {
        internal double rate;
        internal IntPtr name_column;
        internal byte ignore_timecode_mismatch;
    }

    /// <summary>The C interface's own <c>OtioTimeRange</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioTimeRange
    {
        internal Native.OtioRationalTime start_time;
        internal Native.OtioRationalTime duration;
    }

    /// <summary>The C interface's own <c>OtioTimeTransform</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioTimeTransform
    {
        internal Native.OtioRationalTime offset;
        internal double scale;
        internal double rate;
    }

    /// <summary>The C interface's own <c>OtioV2d</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioV2d
    {
        internal double x;
        internal double y;
    }

    /// <summary>The C interface's own <c>OtioWriteOptions</c>.</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct OtioWriteOptions
    {
        internal double rate;
        internal EdlStyle edl_style;
        internal nuint reelname_len;
        internal IntPtr video_format;
    }

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_read_from_bytes(Format format, byte[]? data, nuint len, IntPtr options, out IntPtr outDocument);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_read_from_file(Format format, IntPtr path, IntPtr options, out IntPtr outDocument);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioReadOptions otio_read_options_default();

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Native.OtioWriteOptions otio_write_options_default();

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_write_to_bytes(Format format, IntPtr source, IntPtr options, out Native.OtioBuffer outBytes);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_write_to_file(Format format, IntPtr source, IntPtr path, IntPtr options);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_algorithm_flatten_stack(IntPtr target, Native.OtioNode stack, out Native.OtioNode outTrack);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_algorithm_flatten_tracks(IntPtr target, Native.OtioNode[]? tracks, nuint howMany, out Native.OtioNode outTrack);

    [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
    internal static extern Status otio_algorithm_track_trimmed_to_range(IntPtr target, Native.OtioNode track, Native.OtioTimeRange trimRange, out Native.OtioNode outTrack);
